--- a/sandbox/dominio/pom.xml
+++ b/sandbox/dominio/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>EvalEx</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.2.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
