--- a/sandbox/dominio/pom.xml
+++ b/sandbox/dominio/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>gson</artifactId>
             <version>2.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <profiles>
